# lrt-cinema

./: .gitignore  CHANGELOG.md  CLAIMS.md  CLAUDE.md  FIXTURES.md  LICENSE  README.md  SCOPE.md  pyproject.toml
.audit_tmp/: ablate.py  acr3_default_curve.json  adobe_pipeline.py  asn_sweep.py  characterize.py  demosaic_sweep.py  diff_rose_vs_dngvalidate.py  diff_vs_dngvalidate.py  dist_compare.py  dngvalidate_render.py  exposure_sweep.py  extract_transfer.py  full_bitdepth_compare.py  global_cast_test.py  gym_kelvin_sweep.py  highlight_test.py  inject_colorin.py  kelvin_sweep.py  replay_stage3.py  rose_ablate.py  rose_kelvin_sweep.py  rose_matrix_isolate.py  rose_trace.py  sample_cube.py  sample_lights.py  spatial_diag.py  stage_compare.py  test_dng_input.py  test_rose.py  verify_demosaic.py
.github/workflows/: ci.yml
docs/: DECISIONS.md  EMISSION_FORMAT_VERDICT.md  EMISSION_FORMAT_VERIFIED.md  EXR_VERIFICATION.md  HL_RECON_SURVEY.md  LRT_ROUNDTRIP.md  PIPELINE.md  REFERENCE_PIPELINE.md  V03_PLAN.md  V04_PLAN.md  VALIDATION.md
docs/archive/: LRT_ROUNDTRIP.md
docs/archive/memory-snapshot-2026-06-10/: MEMORY.md  alt-raw-engine-feasibility.md  blinds-false-color-survey.md  capture-sharpening-d2.md  deflicker-rootcause-audit.md  demosaic-test-fixtures.md  develop-op-expansion-playbook.md  grading-fidelity-and-frontier.md  highlight-recovery-tier1-and-stage9-clamp.md  lrt-jpg-northstar-baseline.md  render-perf-backend.md  ship-gate-render-path.md  trunk-branch-overhaul.md  vertical-cyan-rootcause.md
docs/archive/research/: alt-raw-engine-feasibility.md  dead-session-artifacts-2026-06-07.md  deflicker-rootcause-audit.md  pipeline-order-audit.md  (+7 more)
docs/research/: ADVERSARIAL_AUDIT_2026-05-23.md  DNG_SDK_FEASIBILITY.md  DT_WORKFLOW_EXPOSURE_INTERACTION.md  KELVIN_MULTIPLIERS_RESEARCH.md  PV2012_CALIBRATION_RESEARCH.md  _proto_local_laplacian.py  amaze-blinds-test.md  deflicker-rootcause-audit.md  demosaic-false-color-test.md  demosaic-test-fixtures.md  dng-pipeline-findings.md  edge-fringing-rootcause.md  pipeline-overhaul-plan.md  sequence-comparison-findings.md  v06-architecture.md  v06-impact-audit.md  v06-simplification-plan.md  v07-beta-xml-deadend.md  v07-emission-criteria-reframed.md  v07-emission-format.md  v07-emission-keyframe-vs-recovery.md  v07-proprietary-raw-codec-feasibility.md  v07-resolve-cdng-spike-results.md  v07-resolve-cdng-spike.md  v07-spec-revision-plan.md  v07-vs-v06-emission-comparison.md  v08-render-path-survey.md  v08-timelapse-emission-survey.md  v09-dualmode-impl-plan.md  v09-standalone-app-build-vs-not.md  v09-standalone-repo-plan.md  v09-vkdt-fork-ui-strategy.md  v10-local-tone-mapping-dr-compression.md  v10c-local-laplacian-base-deferred.md
src/lrt_cinema/: __init__.py  __main__.py  _acr3_curve.py  _amaze_demosaic.py  _amaze_numba.py  _b1_highlight.py  _ca_correct.py  _fast_llf.py  _fc_suppress.py  _hotpixels.py  _mlri_demosaic.py  _opposed_reconstruct.py  _rcd_demosaic.py  _segbased_reconstruct.py  _srgb_icc.py  calibration.py  cli.py  dcp.py  develop_ops.py  dng_convert.py  highlight_recovery.py  interpolation.py  ir.py  lut3d_baker.py  output.py  pipeline.py  runner.py  scene_tone.py  synthetic_dng.py  xmp_emitter.py  xmp_parser.py
tests/: conftest.py  fixture_paths.py  synthetic_chart.py  synthetic_dng.py  test_accel_kernels.py  test_accel_mlx.py  test_accel_rcd.py  test_amaze.py  test_ca_correct.py  test_calibration.py  test_cli.py  test_color_oracle.py  test_colorimetric.py  test_context_budget.py  test_dcp.py  test_demosaic_routing.py  test_develop_ops.py  test_dng_convert.py  test_dt_integration.py  test_fc_suppress.py  test_grading_sweep.py  test_highlight_recovery.py  test_holy_grail.py  test_hotpixels.py  test_interpolation.py  test_ir.py  test_lut3d_baker.py  test_mlri_demosaic.py  test_opposed_reconstruct.py  test_output.py  test_pipeline.py  test_rcd_demosaic.py  test_runner.py  test_scene_tone.py  test_segbased.py  test_sharpness.py  test_synthetic_dng.py  test_validation_interpolation.py  test_validation_spatial.py  test_validation_sweep.py  (+4 more)
tests/fixtures/: synthetic_holy_grail.xmp  synthetic_keyframe_a.xmp  synthetic_keyframe_b.xmp  synthetic_multi_description.xmp  synthetic_real_lrt_keyframe.xmp  synthetic_real_lrt_mask_offsets.xmp  synthetic_with_tone_curve.xmp
tools/: README.md  amaze_numba_bench.py  ca_correct_experiment.py  ca_order_probe.py  cal_deflicker_factor.py  cal_domain_round2.py  cal_exposure_domain.py  cal_hlsh_fit.py  cal_probe_round2.py  calibrate_camera.py  demosaic_ab_flip.py  diagnose_vs_lrt_preview.py  dt_amaze_anchor.py  exr_gate_materials.py  extract_dcp.py  extract_dcp_library.py  fc_suppress_experiment.py  fc_suppress_flips.py  fringe_forensics.py  h1_wb_demosaic_ab.py  hl_amaze_wrapper_experiment.py  hl_matrix_experiment.py  hl_neutral_experiment.py  hl_reconstruct_experiment.py  hl_reconstruct_flips.py  hl_segbased_experiment.py  hl_truth_harness.py  hlsh_artifact_suite.py  hlsh_flips.py  hlsh_v2_diagnostics.py  measure_a_prime_ceiling.py  measure_dcp_variance.py  owner_ab_grid.py  owner_flip_stack.py  segbased_guard_probe.py  seq_demosaic_matrix.py  seq_lrt_compare.py  seq_lrt_compare_linear.py  seq_spot_amaze.py  seq_spot_ca.py  (+1 more)
tools/amaze_harness/: amaze_blinds.py  falsify.py
tools/demosaic_bench/: charts.py  kodak_cpsnr.py  metrics.py  run_battery.py  temporal.py  test_metrics.py
tools/demosaic_falsecolor/: crop_blinds.py  metric.py
tools/edge_fringe/: cfa_inpaint_diag.py  fringe_metric.py
tools/grading_sweep/: README.md  build_sweep_xmps.py  chart.py  run_sweep.py
tools/perf/: bench_render.py
tools/production_test/: README.md  run.py
tools/resolve_verify/: harness.py  make_assets.py  test_aces_mode_flag.py  test_acescg_roundtrip.py  test_cdng.py  test_cdng_color.py  test_cdng_color_v2.py  test_chromaticities.py  test_exr.py  test_linear_gamut.py  test_lineardng.py
tools/test_articles/: RESULTS.md  TAXONOMY.md  fields.py  make_articles.py  report_table.py  run_pressure.py  score_lr_anchors.py
tools/v07_fullstack/: run_test.py
tools/v07_spike/: inject_dng_tag.py
(+108 files in other folders)
