[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lrt-cinema"
version = "0.1.0a0"
description = "Translate LRTimelapse XMP develop instructions into darktable history-stack XMP sidecars; render cinema-native intermediates via darktable-cli."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "lrt-cinema contributors" }]
keywords = ["timelapse", "darktable", "raw", "cinema", "lrtimelapse"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "defusedxml>=0.7",
    # NumPy is used by the DCP color-matrix math in src/lrt_cinema/dcp.py;
    # the rest of the runtime is numpy-free. Users running darktable
    # already have it via its image-processing stack.
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.4",
    # ColorChecker ΔE2000 test harness (tests/test_colorimetric.py).
    # BSD-3-Clause, compatible with this project's Apache-2.0 license.
    "colour-science>=0.4",
    "tifffile>=2024.0",
    "numpy>=1.24",
]
# Optional extra for the auto-detect ColorChecker path (used only by the
# real-fixture leg of tests/test_colorimetric.py). Heavier — pulls OpenCV —
# so kept out of the base `dev` extra to keep `pip install -e .[dev]` light.
detect = [
    "colour-checker-detection>=0.2",
]

[project.scripts]
lrt-cinema = "lrt_cinema.cli:main"

[project.urls]
Source = "https://github.com/turgid-secretion/lrt-cinema"
Issues = "https://github.com/turgid-secretion/lrt-cinema/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lrt_cinema = ["presets/*.style", "presets/*.ocio", "presets/*.xml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]
