[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lrt-cinema"
version = "0.7.1a0"
description = "Self-contained Python implementation of the Adobe DNG 1.7.1 render pipeline for LRTimelapse-driven timelapse sequences."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "lrt-cinema contributors" }]
keywords = ["timelapse", "raw", "cinema", "lrtimelapse", "dng", "adobe"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "defusedxml>=0.7",
    "filelock>=3.12",
    "numpy>=1.24",
    "rawpy>=0.18",
    # Pinned to a compatible release: colour-science is BOTH a runtime dependency
    # (it builds the production ProPhoto↔ACEScg / OKLab / ACEScct matrices and
    # transfer curves) AND the independent oracle the validation sweep checks
    # transfer round-trips against. An unpinned float would let a future colour
    # release silently shift both the production matrices and the oracle in
    # lockstep — hiding a regression. ~=0.4.6 tracks 0.4.x bugfixes, not 0.5.
    "colour-science~=0.4.6",
    "scipy>=1.10",
    "tifffile>=2024.0",
    "OpenEXR>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.4",
]
# Optional acceleration backend: fused multi-core numba JIT kernels for the
# per-pixel render hotspots (lrt_cinema.accel). NOT required — the renderer
# falls back to the pure-numpy reference when numba is absent. ~7x full-res
# single-frame, colour-identical to numpy (max ΔE2000 < 1e-4). See
# docs/PIPELINE.md §"Compute backends & performance".
fast = [
    "numba>=0.59",
]
# Optional Apple-Silicon Metal GPU backend (--backend mlx): runs the whole
# faithful sRGB render on-device (~9x a heavily-graded full-res frame). The
# environment marker makes this a NO-OP off Apple Silicon, so `pip install
# .[gpu]` is safe (and silently skips mlx) on Linux/Intel — the renderer falls
# back to numba/numpy there. NOT required.
gpu = [
    "mlx>=0.20; platform_system == 'Darwin' and platform_machine == 'arm64'",
]
# Optional extra for the auto-detect ColorChecker path (used only by the
# real-fixture leg of tests/test_colorimetric.py). Heavier — pulls OpenCV —
# so kept out of the base `dev` extra to keep `pip install -e .[dev]` light.
detect = [
    "colour-checker-detection>=0.2",
]

[project.scripts]
lrt-cinema = "lrt_cinema.cli:main"

[project.urls]
Source = "https://github.com/turgid-secretion/lrt-cinema"
Issues = "https://github.com/turgid-secretion/lrt-cinema/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lrt_cinema = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "nearblack: perceptual near-black stability catchers (xfail until the _nearblack_gate fix lands)",
    "spatial: spatial-domain op assertions (halo/ringing) on real 2-D fields",
    "temporal: temporal-coherence / flicker assertions over a frame ramp",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]
